# sem4

./: README.md  frac.hh
1_Fraction/: frac.hh  main.cc
2_Makefile/: Makefile  sum.hh  sum_creator.cc
2_Makefile/race1/: main.cc
2_Makefile/race2/: Makefile  first.cc  second.cc  third.cc
3_criu/: .gitignore  test.cc
4_SecretInfo/: AhoCor.cc  AhoCor.hh  CMakeLists.txt  main.cc
4_SecretInfo/test/: 1.txt
4_SecretInfo/test/dir/: 2.txt
